@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 31-01-2006 changed: don't allow next frames to be dropped after having detected a long duration frame in dvdplayer.
  - 30-01-2006 fixed: Effect speed was double on some controls (select, radio, edit, toggle)
  - 30-01-2006 fixed: Exceptions in mouse handling and in iso9660
  - 30-01-2006 fixed: focused button was not remembered sometimes (homescreen most obvious)
